--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "mocha": "9.2.0",
     "mysql2": "2.3.3",
     "nyc": "15.1.0",
-    "sequelize": "^6.21.3",
+    "sequelize": "^6.21.4",
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
     "@types/sequelize": "^4.28.14",
     "camelcase": "6.3.0",
+    "express-async-errors": "^3.1.1",
     "http-status-codes": "2.2.0",
     "jsonwebtoken": "8.5.1",
     "puppeteer": "13.2.0",
