--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,11 +1,6 @@
 FROM node:16.14-alpine
-
 WORKDIR /app-frontend
-
-COPY package.json .
-
+COPY package.json ./
 RUN npm install
-
-COPY . .
-
-CMD ["node", "index.js"]
+COPY . ./
+CMD [ "npm", "start" ]
